<?xml version="1.0" encoding="utf-8"?>


<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/id_swipe_refresh_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">
    <!--        android:background="#E4E4E4"-->
    <!--
            <ListView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </ListView>
     -->
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <RelativeLayout
                android:id="@+id/rl_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/beijing"
                    android:textColor="@color/text_color" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/tv_city"
                    android:layout_alignTop="@id/tv_city"
                    android:layout_marginStart="-12dp"
                    android:layout_toEndOf="@id/tv_city"
                    android:src="@drawable/arrow" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:text="@string/_14_00"
                android:textColor="@color/text_color"
                android:textSize="12sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_now_weather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/d00" />

                <TextView
                    android:id="@+id/tv_now_weather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="4dp"
                    android:text="@string/sun"
                    android:textColor="@color/text_color" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_today_tmp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/_22_13"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="12dp"
                android:paddingTop="12dp">

                <TextView
                    android:id="@+id/tv_now_tmp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_20"
                    android:textColor="@color/text_color"
                    android:textSize="48sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/wireframe_light"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/pm2_5"
                        android:textColor="@color/text_color" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_aqi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_288"
                            android:textColor="@color/text_color" />

                        <TextView
                            android:id="@+id/tv_quality"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="5"
                            android:gravity="end"
                            android:text="@string/heavy_pollution"
                            android:textColor="@color/text_color" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/wireframe_dark"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/forecast"
                    android:textColor="@color/dark_grey"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_grey" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/tv_next_three"
                    style="@style/TextViewStyle"
                    android:text="@string/_4hour" />

                <TextView
                    android:id="@+id/tv_next_six"
                    style="@style/TextViewStyle"
                    android:text="@string/_4hour" />

                <TextView
                    android:id="@+id/tv_next_nine"
                    style="@style/TextViewStyle"
                    android:text="@string/_4hour" />

                <TextView
                    android:id="@+id/tv_next_twelve"
                    style="@style/TextViewStyle"
                    android:text="@string/_4hour" />

                <TextView
                    android:id="@+id/tv_next_fifteen"
                    style="@style/TextViewStyle"
                    android:text="@string/_4hour" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_next_three"
                    style="@style/ViewStyle"
                    android:src="@drawable/d00" />

                <ImageView
                    android:id="@+id/iv_next_six"
                    style="@style/ViewStyle"
                    android:src="@drawable/d00" />

                <ImageView
                    android:id="@+id/iv_next_nine"
                    style="@style/ViewStyle"
                    android:src="@drawable/d00" />

                <ImageView
                    android:id="@+id/iv_next_twelve"
                    style="@style/ViewStyle"
                    android:src="@drawable/d00" />

                <ImageView
                    android:id="@+id/iv_next_fifteen"
                    style="@style/ViewStyle"
                    android:src="@drawable/d00" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/tv_next_temp3"
                    style="@style/TextViewStyle"
                    android:text="@string/_20degree" />

                <TextView
                    android:id="@+id/tv_six_temp6"
                    style="@style/TextViewStyle"
                    android:text="@string/_20degree" />

                <TextView
                    android:id="@+id/tv_next_temp9"
                    style="@style/TextViewStyle"
                    android:text="@string/_20degree" />

                <TextView
                    android:id="@+id/tv_next_temp12"
                    style="@style/TextViewStyle"
                    android:text="@string/_20degree" />

                <TextView
                    android:id="@+id/tv_next_temp15"
                    style="@style/TextViewStyle"
                    android:text="@string/_20degree" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_today_day"
                    style="@style/TextViewStyle"
                    android:layout_weight="3"
                    android:gravity="left"
                    android:paddingStart="20dp"
                    android:text="@string/today" />

                <ImageView
                    android:id="@+id/iv_today_weather"
                    style="@style/ViewStyle"
                    android:layout_weight="4"
                    android:src="@drawable/d00" />

                <TextView
                    android:id="@+id/tv_today_temp_a"
                    style="@style/TextViewStyle"
                    android:layout_weight="4"
                    android:text="@string/_22" />

                <TextView
                    android:id="@+id/tv_today_temp_b"
                    style="@style/TextViewStyle"
                    android:layout_weight="4"
                    android:text="@string/_14" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_tomorrow_day"
                    style="@style/TextViewStyle"
                    android:layout_weight="3"
                    android:gravity="left"
                    android:paddingStart="20dp" />

                <ImageView
                    android:id="@+id/iv_tomorrow_weather"
                    style="@style/ViewStyle"
                    android:layout_weight="4"
                    android:src="@drawable/d00" />

                <TextView
                    android:id="@+id/tv_tomorrow_temp_a"
                    style="@style/TextViewStyle"
                    android:layout_weight="4"
                    android:text="@string/_22" />

                <TextView
                    android:id="@+id/tv_tomorrow_temp_b"
                    style="@style/TextViewStyle"
                    android:layout_weight="4"
                    android:text="@string/_14" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_third_day"
                    style="@style/TextViewStyle"
                    android:layout_weight="3"
                    android:gravity="left"
                    android:paddingStart="20dp" />

                <ImageView
                    android:id="@+id/iv_third_weather"
                    style="@style/ViewStyle"
                    android:layout_weight="4"
                    android:src="@drawable/d00" />

                <TextView
                    android:id="@+id/tv_third_temp_a"
                    style="@style/TextViewStyle"
                    android:layout_weight="4"
                    android:text="@string/_22" />

                <TextView
                    android:id="@+id/tv_third_temp_b"
                    style="@style/TextViewStyle"
                    android:layout_weight="4"
                    android:text="@string/_14" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_fourth_day"
                    style="@style/TextViewStyle"
                    android:layout_weight="3"
                    android:gravity="start"
                    android:paddingStart="20dp" />

                <ImageView
                    android:id="@+id/iv_fourth_weather"
                    style="@style/ViewStyle"
                    android:layout_weight="4"
                    android:src="@drawable/d00" />

                <TextView
                    android:id="@+id/tv_fourth_temp_a"
                    style="@style/TextViewStyle"
                    android:layout_weight="4"
                    android:text="@string/_22" />

                <TextView
                    android:id="@+id/tv_fourth_temp_b"
                    style="@style/TextViewStyle"
                    android:layout_weight="4"
                    android:text="@string/_14" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.v4.widget.SwipeRefreshLayout>

